price_scrapper_front/src/components/Profile/Profile.css
.profileDiv {
    margin-top: 100px;
}

.profileDiv h1 {
    text-align: center;
}

.viewedList, .wishList {
    display: flex;
    list-style-type: none;
    text-align:  center;
    height: 10%;
    width: 80%;
    overflow:scroll;
}

.viewedDiv, .wishDiv {
    position: fixed;
    width: 100%;
    left: 15%;
    text-align: center;
}

.profilePage {
    list-style-type: none;
    margin-top: 10px;
}

.MuiPaper-root.MuiDrawer-paper.MuiDrawer-paperAnchorLeft.MuiDrawer-paperAnchorDockedLeft.MuiPaper-elevation0 {
    background-color:#2c56e0;
    color: white;
    top: 47px;
    z-index: 0;
}

form {
    margin: 50px 100px 10px 100px;
  }

.form-group {
    display: flex;
    flex-wrap: wrap;
    gap: 10px 10px;
}

.form-name, .form-email, .form-password {
    margin: auto;
}

#updateBtn {
    margin: 10px;
    background-color:#3f51b5;
    color: white;
    width: 15%;
}

#updateBtn:hover {
    background-color:white;
    color: #3f51b5;
    box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%), 0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
}

form ul li label {
    margin-top: 14px;
    float: left;
}

.textField {
    float: right;
}

form ul li {
    height: 60px;
}

#empty {
    z-index: -1;
    text-align: center;
    left: 28%;
    position: absolute;
}

#drawer {
    z-index: 1;
}

.centerDiv {
    margin: auto;
    padding: 20px;
    border: 1px solid black;
    border-radius: 30px;
    background-color: ghostwhite;
    width: 400px;
    height: 260px;
}

.centerDivUpdate {
    margin: auto;
    padding: 20px;
    border: 1px solid black;
    border-radius: 30px;
    background-color: ghostwhite;
    width: 600px;
    height: 450px;
}

#profileForm {
    float: left;
}

hr.MuiDivider-root {
    background-color: white;
    margin-top: 25%;
}

#drawer .MuiListItem-button {
    width: 120%;     
}

#drawer .MuiListItem-button:hover {
    text-decoration: none;
    background-color: white;
    color: #3f51b5;
}

